added pagination, filter and sorting for problems and articles
